--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "json-server": "0.16.3",
+    "mongoose": "^5.12.2",
+    "mongoose-deep-populate": "^3.2.0",
     "nuxt": "^2.15.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "body-parser": "1.19.0"
   },
   "devDependencies": {
     "node-sass": "^4.7.2",
