--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "body-parser": "1.19.0",
+    "bootstrap-vue": "^2.21.2",
     "cookieparser": "^0.1.0",
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
@@ -19,8 +21,7 @@
     "mongoose": "^5.12.2",
     "mongoose-deep-populate": "^3.2.0",
     "nuxt": "^2.15.2",
-    "path": "^0.12.7",
-    "body-parser": "1.19.0"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "node-sass": "^4.7.2",
