--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/moment": "^1.6.1",
     "body-parser": "1.19.0",
     "bootstrap-vue": "^2.21.2",
     "cookieparser": "^0.1.0",
