unit testing init

--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "description",
   "author": "author",
   "private": true,
+  "jest": {
+    "verbose": true
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "test": "jest --verbose"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
@@ -21,8 +25,7 @@
     "json-server": "0.16.3",
     "mongoose": "^5.12.2",
     "mongoose-deep-populate": "^3.2.0",
-    "nuxt": "^2.15.2",
-    "path": "^0.12.7"
+    "nuxt": "^2.15.2"
   },
   "devDependencies": {
     "node-sass": "^4.7.2",
@@ -32,6 +35,10 @@
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-vue": "^4.0.0"
+    "eslint-plugin-vue": "^4.0.0",
+    "path": "^0.12.7",
+    "supertest": "6.1.6",
+    "jest": "27.1.1",
+    "axios": "0.21.4"
   }
 }
