--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
     "json-server": "0.16.3",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.2",
     "mongoose-deep-populate": "^3.2.0",
-    "nuxt": "^2.15.2"
+    "nuxt": "^2.15.2",
+    "vue-lodash": "^2.1.2"
   },
   "devDependencies": {
     "node-sass": "^4.7.2",
