--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
-    "test": "jest --verbose"
+    "test": "jest --testEnvironment=node --runInBand"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
@@ -38,7 +38,8 @@
     "eslint-plugin-vue": "^4.0.0",
     "path": "^0.12.7",
     "supertest": "6.1.6",
-    "jest": "27.1.1",
+    "jest": "27.3.0",
+    "mongodb-memory-server": "7.4.4",
     "axios": "0.21.4"
   }
 }
