--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
-    "test": "jest --testEnvironment=node --runInBand"
+    "test": "cross-env NODE_ENV=test jest --testEnvironment=node --runInBand --detectOpenHandles"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
